month05.html style modified

--- a/complex/month05.html
+++ b/complex/month05.html
@@ -253,13 +253,14 @@
 
 
 
-<script>
-    document.addEventListener("DOMContentLoaded", function (event) {
-      navbarToggleSidebar();
-      closeMenuBeforeGoingToPage();
-      navActivePage();
-    });
-</script>
- <script type="text/javascript" src="./main.4c6e144e.js"></script></body>
+  <script>
+      document.addEventListener("DOMContentLoaded", function (event) {
+        navbarToggleSidebar();
+        closeMenuBeforeGoingToPage();
+        navActivePage();
+      });
+  </script>
+  <script type="text/javascript" src="./main.4c6e144e.js"></script>
+</body>
 
 </html>
